# PoBF

./: .gitignore  .gitmodules  .lia.cache  Cargo.toml  Makefile  PoBF.md  PoBF.org  README.md  data.enc  demo-verify.sh  formulas.md  formulasv2.md  install_signer_patched.sh  paper-related.md  pobf.org  prepare_prusti.sh  problems.md  prusti_verify.sh  requirements.txt  reviews.md  rust-toolchain  setup.sh  system.patch  verify_roadmap.md
app/: Cargo.toml  Enclave_u.c  Enclave_u.h  README.md  build.rs  enclave_u.c  enclave_u.h
app/src/: hex.rs  main.rs  ocall.rs
cargo-pobfv/: Cargo.toml
cargo-pobfv/src/: main.rs
cctasks/db/: Cargo.toml
cctasks/db/src/: db.rs  lib.rs
cctasks/evaluation_tvm/: Cargo.toml  README.md
cctasks/evaluation_tvm/model_deploy/: Makefile  build_model.py  bundle.c  bundle.h  model_entry.c
cctasks/evaluation_tvm/src/: lib.rs
cctasks/fann/: Cargo.toml
cctasks/fann/src/: lib.rs
cctasks/fasta/: Cargo.toml
cctasks/fasta/src/: lib.rs
cctasks/polybench/: Cargo.toml
cctasks/polybench/src/: lib.rs
cctasks/sample_add/: Cargo.toml
cctasks/sample_add/src/: lib.rs
clear_on_drop/: Cargo.toml
clear_on_drop/src/: clear_stack_on_return.rs  hide.c  hide.rs  lib.rs
data/task_fann/: manifest.json  preprocess.py
data/task_fasta/: manifest.json  preprocess.py
data/task_polybench/: manifest.json
data/task_sample/: manifest.json
data/task_tvm/: manifest.json
data_provider/: Cargo.toml  Makefile  README.md  build.rs  cert.pem  image_net_interpreter.py  key.pem  manifest.json
data_provider/src/: dh.rs  handlers.rs  main.rs  secure_channel.rs  utils.rs
data_provider/tvl/: Makefile  app
data_provider/tvl/App/: App.cpp  App.h
data_provider/tvl/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
data_provider_sev/: Cargo.toml
data_provider_sev/src/: main.rs
docker/: Dockerfile  README.md
enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem  Enclave_t.c  Enclave_t.h  Makefile  Prusti.toml  README.md  Xargo.toml  demo-verify.sh  demo.sh  enclave.edl  enclave_t.c  enclave_t.h  x86_64-unknown-linux-sgx.json
enclave/src/: bogus.rs  dh.rs  lib.rs  mirai_defs.rs  ocall.rs  pobf.rs  pobf_verifier.rs  ra_utils.rs  types.rs  userfunc.rs  utils.rs  verify_utils.rs
enclave/src/types/: arrayaes.rs  mod.rs  protected.rs  sealed.rs  state.rs  taint.rs  task.rs  vecaes.rs
examples/leakage/: Cargo.toml
examples/leakage/src/: main.rs
others/: README.md
others/enarx/: Cargo.toml  Enarx.toml  README.md
others/enarx/.cargo/: config.toml
others/enarx/client/src/: main.rs
others/enarx/server/: Cargo.toml
others/enarx/server/.cargo/: config.toml
others/enarx/server/src/: db_persistent.rs  main.rs  task.rs
others/enarx/tvm-wasm/wasm-graph/: Cargo.toml
others/enarx/tvm-wasm/wasm-graph/tools/: build_graph_lib.py
others/enarx/tvm-wasm/wasm-runtime/: Cargo.toml  build.rs
others/enarx/tvm-wasm/wasm-runtime/src/: lib.rs
others/evaluation_tvm/: Cargo.toml
others/evaluation_tvm/model_deploy/: Makefile  bundle.c  model_entry.c
others/evaluation_tvm/src/: lib.rs
others/gramine/: .gitignore  Makefile  client_dcap.manifest  client_dcap.manifest.sgx  client_dcap.sig  download  server.manifest  server.manifest.sgx  server.manifest.template  server.sig
others/gramine/rustlib/: Cargo.toml
others/gramine/rustlib/src/: lib.rs
others/gramine/src/: client.cc  server.c  server.cc
others/occlum/: .gitignore  Occlum.json  build_occlum_rust.sh  docker_run.sh  rust_config.yaml
others/occlum/rust_app/: Cargo.toml
others/occlum/rust_app/server/: Cargo.toml
others/occlum/rust_app/server/src/: main.rs  task.rs
others/occlum/rust_app/src/: main.rs
others/rust/: Cargo.toml
others/rust/evaluation_tvm/: Cargo.toml  build.rs
others/rust/evaluation_tvm/model_deploy/: Makefile
others/rust/src/: main.rs
others/rust_app/client/: Cargo.toml
others/rust_app/client/src/: main.rs
others/rust_app/server/: Cargo.toml
others/rust_app/server/src/: db_persistent.rs  dcap.rs  main.rs  task.rs
platform_sev/: Cargo.toml  Makefile  README.md  build.rs  rust-toolchain
platform_sev/attestation_lib/: Makefile  attest.cc  logger.cc  logger.h  utils.cc  utils.h
platform_sev/src/: db_persistent.rs  ffi.rs  key.rs  main.rs  pobf.rs  vecaes.rs
platform_sgx/: Makefile
platform_sgx/app/: Cargo.toml  build.rs
platform_sgx/app/src/: main.rs  ocall.rs
platform_sgx/enclave/: Cargo.toml  config.xml  enclave.edl
platform_sgx/enclave/src/: db_persistent.rs  dh.rs  lib.rs  networking_utils.rs  ocall.rs  pobf.rs  pobf_verifier.rs  ra_utils.rs  userfunc.rs  utils.rs  vecaes.rs
platform_sgx/enclave/src/mirai_types/: mirai_comp.rs  mod.rs  task.rs  userfunc.rs
platform_sgx/enclave/src/types/: task.rs  vecaes.rs
pobf_crypto/: Cargo.toml
pobf_crypto/src/: lib.rs
pobf_keychain/: cert.der
pobf_proof/: _CoqProject  model.v  modelT.v
pobf_state/: Cargo.toml  Prusti.toml
pobf_state/src/: asset.rs  bogus.rs  lib.rs  mirai_comp.rs  task.rs
pobf_thread_pool/: Cargo.toml
pobf_thread_pool/src/: lib.rs
pobf_verifier/: cargo-pobf-verify  pobf-verify
proof/: README.md  model.v  modelT.v  model_list.v
scripts/: README.md  clean_data.sh  cost_breakup.ipynb  db.ipynb  demo-verify.sh  evaluation.sh  evaluation_concurrent.sh  figure.ipynb  figure2.ipynb  multi_threading.sh  plt.ipynb  plt_cost_breakup.ipynb  plt_main.ipynb  plt_stack.ipynb  prepare_mirai.sh  prepare_prusti.sh
scripts/data_generator/: Cargo.toml
scripts/data_generator/src/: main.rs
service_provider/: Cargo.toml  README.md
service_provider/src/: dh.rs  handlers.rs  main.rs  utils.rs
src/: bogus.rs  lib.rs  main.rs  ocall.rs  pobf.rs  types.rs  utils.rs
src_ob/: types.rs
userfunc/: Cargo.toml
userfunc/src/: lib.rs
verifier/: README.md  cargo-pobf-verify  pobf-verify  pobf.py
verifier/src/: lib.rs  taint.rs  types.rs  verify.rs
