[package]
name = "pobf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirai-annotations = { path = "../../Artifact/MIRAI/annotations" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../teaclave-sgx-sdk/sgx_types" }
