[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
clap = { version = "3.1.5", features = ["derive"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }