[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types"}
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts"}
clap = { version = "3.1.5", features = ["derive"] }
libc = "0.2.0"
# sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc", default-features = false }