[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types"}
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts"}
clap = { version = "3.1.5", features = ["derive"] }
libc = "0.2.0"
rustls = "0.20.6"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"]}
base64 = "0.13.0"
base16 = "0.2.1"
hex = "0.4.3"