[package]
name = "data_provider"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
aes-gcm = "0.10.1"
base64 = "*"
clap = { version = "3.1.5", features = ["derive"] }
cmac = "0.7.1"
curl = "0.4.44"
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
pem = "1.1.0"
rand = { version = "0.8.5", features = [ "std" ] }
ring = "0.16.20"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_types" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_urts" }