[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "pobfref"
crate-type = ["lib", "staticlib"]

[features]
# turn on mirai when veirifying towards mirai
default = []
sgx = ["sgx_no_tstd", "sgx_trts", "sgx_tseal"]
rand = ["sgx_rand"]
# potential violations
violation = ["vio_typestate", "vio_private", "vio_unsafe", "vio_ocall", "sgx"]
vio_typestate = ["sgx", "disallowed_trans", "rude_copy"]
disallowed_trans = []
rude_copy = []
vio_private = ["sgx", "direct_decrypt", "access_inner", "access_key"]
direct_decrypt = []
access_inner = []
access_key = []
vio_unsafe = ["sgx", "raw_read", "raw_write"]
raw_read = []
raw_write = []
vio_ocall = ["sgx", "leak_log", "leak_net", "leak_file"]
leak_log = []
leak_net = []
leak_file = []
# Verification contracts
use_prusti = []
enable_task = []

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "alloc" ] }
clear_on_drop = { git = "https://github.com/hiroki-chen/clear_on_drop", branch = "master" }
mirai-annotations = { path = "../MIRAI/annotations" }
# rustls           = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx-client-cert-verifier-patch" }
percent-encoding = { git = "https://github.com/mesalock-linux/rust-url-sgx" }
sgx_alloc = { path = "../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_crypto = { path = "../incubator-teaclave-sgx-sdk/sgx_crypto" }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc", default-features = false }
sgx_no_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_no_tstd", optional = true }
sgx_rand = { path = "../incubator-teaclave-sgx-sdk/sgx_rand", optional = true }
sgx_tdh = { path = "../incubator-teaclave-sgx-sdk/sgx_tdh" }
# sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd", default-features = false, optional = true }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts", optional = true }
sgx_tse = { path = "../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../incubator-teaclave-sgx-sdk/sgx_tseal", optional = true }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
webpki = { version = "0.22.0", features = [ "alloc" ] }

# External dependencies: SGX compatible (or) crates.
zeroize = "1.5.7"
mirai-annotations = { path = "../MIRAI/annotations" }
clear_on_drop = { path = "../clear_on_drop" }
prusti-contracts = {  path = "../../prusti-dev/prusti-contracts" }

[patch.crates-io]
# Patached version of ring.
ring = { git = "https://github.com/sccommunity/ring.git", branch = "teaclave-sgx" }
