[package]
name = "platform_sev"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.1", features = ["zeroize"] }
anyhow = "1.0.71"
clear_on_drop = { git = "https://github.com/hiroki-chen/clear_on_drop.git", features = [
  "nightly",
] }
env_logger = "0.10.0"
log = "0.4.17"
pobf_state = { path = "../pobf_state" }
rand = "0.8.5"
rand_core = "0.6.4"
ring = "0.16.20"
zeroize = "1.6.0"
