[package]
name = "pobf_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
cmac = "0.7.2"
log = "0.4.17"
pem = "2.0.1"
ring = "0.16.20"

[features]
default = ["sgx"]
sgx = []
sev = []
