[package]
name = "service_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
curl = "*"
base64 = "*"
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
ring = "0.16.20"
cmac = "0.7.1"
aes = "0.8.1"