[package]
name = "service_provider"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
aes-gcm = "0.10.1"
base64 = "*"
clap = { version = "3.1.5", features = ["derive"] }
cmac = "0.7.1"
curl = "0.4.44"
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
pem = "1.1.0"
ring = "0.16.20"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
