[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13.2", features = ["bumpalo", "serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.163", default-features = false, features = ["alloc"] }
spin = { version = "0.9.8", default-features = false, features = [
  "rwlock",
  "once",
] }


[lib]
doctest = false

[dev-dependencies]
bincode = "1.3.3"
