[package]
name = "polybench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polybench-rs = { git = "https://github.com/hiroki-chen/polybench-rs.git" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_types", optional = true }

[features]
default = ["sgx"]
std = []
sgx = ["sgx_types"]
mirai = []
