[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
base16 = "0.2.1"
base64 = "0.13.0"
clap = { version = "3.1.5", features = ["derive"] }
env_logger = "0.9.1"
hex = "0.4.3"
libc = "0.2.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_types" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_urts" }
