[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["no_wasi"]
wasi = ["pobf_crypto/wasi_support"]
no_wasi = ["pobf_crypto/sev"]
task_sample = ["sample_add"]
task_tvm = ["evaluation_tvm"]
task_polybench = ["polybench"]
task_fann = ["fann"]
task_fasta = ["fasta"]
task_db = ["db"]
occlum = ["occlum_dcap"]

[dependencies]
occlum_dcap = { git = "https://github.com/occlum/occlum.git", branch = "master", optional = true }
# Evaluations.
pobf_thread_pool = { path = "../../../pobf_thread_pool" }
pobf_crypto = { git = "https://github.com/hiroki-chen/pobf_crypto.git", default-features = false }
evaluation_tvm = { path = "../../evaluation_tvm", optional = true }
fann = { path = "../../../cctasks/fann", optional = true }
fasta = { path = "../../../cctasks/fasta", optional = true }
polybench = { path = "../../../cctasks/polybench", optional = true }
sample_add = { path = "../../../cctasks/sample_add", optional = true }
cfg-if = "1.0.0"
db = { path = "../../../cctasks/db", optional = true }
