[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
image = "0.24.5"
lazy_static = "1.4.0"
ndarray = "0.12"
tvm-graph-rt = { git = "https://github.com/apache/tvm.git" }
